# rustdesk

./: .gitmodules  Cargo.toml
.github/: dependabot.yml
.github/workflows/: bridge.yml  ci.yml  flutter-build.yml  flutter-nightly.yml  playground.yml  sync.yml
flutter/: pubspec.yaml
flutter/lib/: main.dart
flutter/lib/desktop/pages/: install_page.dart
flutter/lib/models/: chat_model.dart  server_model.dart
flutter/windows/runner/: Runner.rc
libs/portable/: Cargo.toml
res/msi/Package/Components/: RustDesk.wxs
res/msi/Package/Fragments/: AddRemoveProperties.wxs
src/: client.rs  common.rs  core_main.rs  rendezvous_mediator.rs  updater.rs
src/hbbs_http/: sync.rs
src/platform/: windows.rs
